# vosk-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
crates/vosk/: CHANGELOG.md  Cargo.toml
crates/vosk-sys/: CHANGELOG.md  Cargo.toml  README.md
crates/vosk-sys/src/: lib.rs
crates/vosk/examples/: grammar.rs  microphone.rs  read_wav.rs  speaker_model.rs
crates/vosk/src/: gpu.rs  lib.rs  log.rs
crates/vosk/src/models/: batch.rs  sequential.rs
crates/vosk/src/recognition/: batch.rs  errors.rs  mod.rs  results.rs  sequential.rs
nix/shells/default/: default.nix
vosk/: CHANGELOG.md  Cargo.toml  README.md
vosk-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
vosk-sys/src/: lib.rs
vosk/examples/: grammar.rs  microphone.rs  read_wav.rs  speaker_model.rs
vosk/src/: cuda.rs  lib.rs  log.rs  models.rs  prelude.rs
vosk/src/models/: mod.rs  sequential.rs
vosk/src/recognition/: batch.rs  mod.rs  results.rs  sequential.rs
