[package]
name = "vosk"
version = "0.1.0"
edition = "2021"
authors = ["Bear_03"]
description = "Safe wrapper around the Vosk API Speech Recognition library"
keywords = ["speech", "speech-to-text", "stt"]
categories = ["multimedia::audio"]

[dependencies]
vosk-sys = { path = "../vosk-sys" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# Dependencies for examples
cpal = "0.13"
dasp = "0.11"
hound = "3.4"

