[package]
name = "vosk-sys"
version = "0.1.1"
edition = "2021"
authors = ["Bear_03"]
description = "Raw FFI bindings around the Vosk API Speech Recognition Toolkit"
license = "MIT"
repository = "https://github.com/Bear-03/vosk-rs"
keywords = ["speech", "speech-to-text", "stt"]
categories = ["api-bindings", "multimedia::audio"]

[dependencies]
