[package]
name = "vosk"
version = "0.2.0"
edition = "2021"
authors = ["Bear_03"]
description = "Safe wrapper around the Vosk API Speech Recognition Toolkit"
license = "MIT"
repository = "https://github.com/Bear-03/vosk-rs"
keywords = ["speech", "speech-to-text", "stt"]
categories = ["api-bindings", "multimedia::audio"]

[dependencies]
vosk-sys = { path = "../vosk-sys", version = "0.1" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
# Dependencies for examples
cpal = "0.15"
dasp = "0.11"
hound = "3.5"

[features]
batch = []
